fix(back-to-top): re-add vertical alignment for pf-icon

--- a/elements/pf-back-to-top/pf-back-to-top.css
+++ b/elements/pf-back-to-top/pf-back-to-top.css
@@ -36,6 +36,7 @@ a {
 pf-icon {
   /* override icon size as default sm variant is incorrect */
   --pf-icon--size: var(--pf-c-button--FontSize);
+  vertical-align: -0.125rem;
 }
 
 span {
